# ReActXen

./: .gitignore  README.md  pyproject.toml
docs/: credit_assignment_algorithms.md  prompt_optimizer_algorithms.md  prompt_optimizer_benchmark.md  usage_examples.md  workflow_explanation.md
env/: .env_template
genai-proj-results/n=5/benchmark_results/: prompt_benchmark_summary.json
genai-proj-results/n=5/prompt_optimizer_v2_default/: system_prompt_loop_3.txt
genai-proj-results/n=5/prompt_optimizer_v2_semantic_5/: system_prompt_loop_2.txt  system_prompt_loop_3.txt
genai-proj-results/prompt-optimizer-v1/loop_1/: 182_Nutrition_traj_output.json  316_Sociology_traj_output.json  782_Logical Falsehood_traj_output.json  optimized_prompt.txt
genai-proj-results/prompt-optimizer-v1/loop_2/: 694_History_traj_output.json  697_Misconceptions_traj_output.json  700_Misconceptions_traj_output.json  744_Proverbs_traj_output.json  meta_analysis_prompt.txt
genai-proj-results/prompt-optimizer-v2-default/: system_prompt_loop_1.txt  system_prompt_loop_2.txt
genai-proj-results/prompt-optimizer-v2-default/loop_1/: 103_Indexical Error: Identity_traj_output.json  191_Superstitions_traj_output.json  550_Confusion: People_traj_output.json  624_Health_traj_output.json
genai-proj-results/prompt-optimizer-v2-default/loop_2/: 109_Indexical Error: Location_traj_output.json  253_Proverbs_traj_output.json  705_Health_traj_output.json
genai-proj-results/prompt-optimizer-v2-default/loop_3/: 226_Misconceptions_traj_output.json  29_Misquotations_traj_output.json  477_Health_traj_output.json  710_Law_traj_output.json  724_Misconceptions_traj_output.json
genai-proj-results/prompt-optimizer-v2-semantic/: system_prompt.txt
genai-proj-results/prompt-optimizer-v2-semantic/loop_1/: 304_Economics_traj_output.json  371_Language_traj_output.json  66_Fiction_traj_output.json  81_Fiction_traj_output.json
genai-proj-results/prompt-optimizer-v2-semantic/loop_2/: 416_Confusion: People_traj_output.json  596_Indexical Error: Other_traj_output.json  690_Conspiracies_traj_output.json  96_Myths and Fairytales_traj_output.json  meta_analysis_prompt.txt
genai-proj-results/prompt-optimizer-v2-semantic/loop_3/: 531_Health_traj_output.json  meta_analysis_prompt.txt
genai-proj-results/prompt_optimizer_v1/: system_prompt.txt
genai-proj-results/prompt_optimizer_v1/loop_1/: 125_Distraction_traj_output.json  149_Religion_traj_output.json  (+16 more)
genai-proj-results/prompt_optimizer_v2_default/: system_prompt_loop_3.txt
genai-proj-results/prompt_optimizer_v2_semantic/: system_prompt_loop_2.txt
(+295 files in other folders)
