[tool.poetry]
name = "reactxen"
version = "0.0.7"
authors = ["James, Nianjun, Dhaval"]
description = "ReAct eXtended"
readme = "README.md"
homepage = "https://github.ibm.com/GenAIApps/ReActXen.git"
repository = "https://github.ibm.com/GenAIApps/ReActXen.git"

packages = [{ include = "reactxen", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain = "^0.3"
langchain-core = "*"
langchain-experimental = "*"
langchain-ibm = "*"
# phable = "0.1.18"
diffusers = "0.34.0"
tqdm = "*"
colorama = "0.4.6"
openai = "^1.45.0"
tiktoken = "*"
ibm_watsonx_ai = "^1.3.0"
setuptools = "^80.0.0"
mdextractor = "*"
pendulum = "3.*"
Jinja2 = "*"

# Optional dependencies for specific use cases
ray = { version = "*", optional = true }
mlflow = { version = "*", optional = true }
rouge_score = { version = "*", optional = true }
datasketch = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pre-commit = "*"
ruff = "*"
jupyter = "^1.1.1"

[tool.poetry.group.test.dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"
flake8 = "*"

[tool.poetry.extras]
langgraph = ["langgraph"]
autoq = ["ray", "mallow", "rouge_score"]

[build-system]
# Updated build-backend to poetry-core for editable installs
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
